--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contacpage.html">Contact Us</a></li>
         </ul>
     </nav>
     
