--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="section">
-            <a href="#"><h2 class="title-evolution">Best Way to Use It</h2></a>
+            <a href="bestwaytouseit.html"><h2 class="title-evolution">Best Way to Use It</h2></a>
             <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/A_hand_pointing_to_a_futuristic_technology.png" alt="Futuristic Technology">
         </div>
     </section>
