--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <section class="image-container">
         <div class="section">
-            <a href="#"><h2 class="title-origin">The Origin</h2></a>
+            <a href="originpage.html"><h2 class="title-origin">The Origin</h2></a>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Ibm_pc_5150.jpg/280px-Ibm_pc_5150.jpg" alt="IBM PC 5150">
         </div>
 
