--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="section">
-            <a href="#"><h2 class="title-future">The Future of Technology</h2></a>
+            <a href="futureandpresentoftechnology.html"><h2 class="title-future">The Future of Technology</h2></a>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZqKtCGWnYXmGNOF-diUzbb427n0unV-SyExhMkDykEDA-TqRD0gUjondlp7v0SvJFH2U&usqp=CAU" alt="Technology Image">
         </div>
 
