--- a/IA.html
+++ b/IA.html
@@ -56,7 +56,7 @@
 
     <nav>
         <ul>
-            <li><a href="#index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="contacpage.html">Contact us</a></li>
         </ul>
     </nav>
