--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/A_hand_pointing_to_a_futuristic_technology.png" alt="Futuristic Technology">
         </div>
     </section>
-
+  <a href="learnabouttheIA.html"><h2 class="title-evolution">Learn about the IA</h2></a>
+    <img class="small-image" src="https://s1.ppllstatics.com/rc/www/multimedia/2023/12/19/ia-comercial-kAe-U21010222973456v-1200x840@RC.jpg" alt="Futuristic Technology">
     <footer>
         <p>&copy; 2024 Technology and Its Evolution</p>
     </footer>
