--- a/learnabouttheIA.html
+++ b/learnabouttheIA.html
@@ -63,8 +63,8 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contactuspage.html">Contact us</a></li>
         </ul>
     </nav>
 
