--- a/learnabouttheIA.html
+++ b/learnabouttheIA.html
@@ -64,7 +64,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="contactuspage.html">Contact us</a></li>
+            <li><a href="contacpage.html">Contact us</a></li>
         </ul>
     </nav>
 
